# thesis-kb

./: .gitignore  .mcp.json  CLAUDE.md  README.md  all_papers.txt  citations_relevant.csv  code_links.json  config-ollama.yaml  config-openrouter-free.yaml  config-openrouter.yaml  config.yaml  create_issues.sh  download_log.json  pipeline_diagram.drawio  pyproject.toml  requirements.txt  run_pipeline.sh
.claude/: fix_status.md  settings.json  survey_improvement_plan.md  survey_improvement_prompt.md  webui_status.md
eval/: canary_queries.json  run_canaries.py  self_retrieval_baseline.json  self_retrieval_test.py  thesis_grounded_baseline.json  thesis_grounded_eval.py
prompts/: background_web.md
scripts/: apply_quality_scores.py  backfill_metadata.py  backfill_metadata_v2.py  download_citations.py  extract_citations.py  fix_broken_metadata.py  migrate_fts5.py  migrate_paper_metadata.py  nightly_review.sh  rebuild_kb.sh  start_api.sh  start_local.sh  vram_calculator.py
slurm/: chunk.slurm  cpu_stages.slurm  embed.slurm  embed_nuggets.slurm  embed_store.slurm  extract.slurm  full_pipeline.slurm  full_rebuild.slurm  nugget_augment.slurm  nugget_extract.slurm  nugget_extract_ollama.slurm  nugget_quality.slurm  nuggets.slurm  quality_augment.slurm  quality_augment_embed.slurm  regenerate_nuggets.slurm  reprocess_pipeline.slurm  review_nuggets.slurm  store.slurm  test_pipeline.slurm  test_unified.slurm  unified.slurm  unified_pipeline.slurm  vllm_embed.slurm
src/: api.py  done_papers.py  fetch_arxiv_metadata.py  fix_manifest_ids.py  log.py  mcp_server.py  query.py  (+2 more)
(+75 files in other folders)
